css comments added

--- a/Develop/index.html
+++ b/Develop/index.html
@@ -35,7 +35,7 @@
     <section class="hero"></section>
 
     <section class="content">
-        <article class="content-style">
+        <article id="search-engine-optimization" class="content-style">
             <img src="./assets/images/search-engine-optimization.jpg" alt="objects on table like seo notebook, laptop, magnifying glass, etc" class="float-left" />
             <h2>Search Engine Optimization</h2>
             <p>
@@ -88,6 +88,7 @@
             &copy; 2019 Horiseon Social Solution Services, Inc.
         </p>
     </footer>
+
 </body>
 
 </html>
